syntax = "proto3";
option java_multiple_files = true;

package com.example.authservice.grpc;

message CreateUserRequest {
  string phoneNumber = 1;
  string password = 2;
  string role = 3;
}

message CreateUserResponse {
  int32 code = 1;
  int64 userId = 2;
}

service CreateUserService {
  rpc createUser(CreateUserRequest) returns (CreateUserResponse);
}
